tests/errors/compiler/dot_in_enum/dot_in_enum_2.c
enum class : int
{
	a,
	b,
	c
} tmp;

int main()
{
	int num = tmp.a;
	return 0;
}